--- a/src/app/pages/homepage/homepage.component.scss
+++ b/src/app/pages/homepage/homepage.component.scss
@@ -3,9 +3,6 @@
   display: grid;
   padding: 0 0.5rem;
   grid-template-columns: repeat(1, minmax(0, 1fr));
-  @media (min-width: 768px) {
-    grid-template-columns: repeat(4, minmax(0, 1fr));
-  }
   column-gap: 1rem;
   row-gap: 0.125rem;
   @include mat.button-overrides(
@@ -14,6 +11,9 @@
       protected-label-text-weight: 700,
     )
   );
+  @media (min-width: 768px) {
+    grid-template-columns: repeat(4, minmax(0, 1fr));
+  }
 }
 
 .news-container {
@@ -22,7 +22,7 @@
   flex-direction: column;
   row-gap: 0.5rem;
   overflow-y: hidden;
-  padding: 0.5rem;
+  padding: 0 0.5rem 0.5rem;
 
   .news-title {
     font-size: 1.5rem;
@@ -42,6 +42,7 @@
     border-radius: 1rem;
     flex-grow: 1;
     overflow-y: scroll;
+    overflow-x: hidden;
   }
 }
 
@@ -60,7 +61,7 @@
   display: flex;
   align-items: center;
   width: fit-content;
-  padding: 2rem 0;
+  padding: 1rem 0;
   font-family:
     Nasalization RG,
     sans-serif;
@@ -69,10 +70,6 @@
     width: 4rem;
     height: 4rem;
     flex-shrink: 0;
-    @media (min-width: 768px) {
-      width: 3rem;
-      height: 3rem;
-    }
   }
   .title-text {
     font-size: 2.5rem;
