update style theme logic

--- a/src/app/debug/components/debug-components.component.html
+++ b/src/app/debug/components/debug-components.component.html
@@ -862,7 +862,7 @@
     <div class="text-xl text-center font-bold">Base</div>
     <ng-container *ngTemplateOutlet="components"></ng-container>
   </div>
-  <div class="md:w-1/2 w-full p-2 overflow-y-auto alternate">
+  <div class="md:w-1/2 w-full p-2 overflow-y-auto" sub-theme="alt">
     <div class="text-xl text-center font-bold">Alternate</div>
     <ng-container *ngTemplateOutlet="components"></ng-container>
   </div>
