--- a/src/app/league-zone/league-tier-list/league-tier-list-form/league-tier-list-form.component.html
+++ b/src/app/league-zone/league-tier-list/league-tier-list-form/league-tier-list-form.component.html
@@ -55,72 +55,102 @@
           }
         </div>
       </div>
-      <div class="tier-container">
-        @for (group of tierGroups; track group) {
-          <div class="tier-group">
-            @if (group.label !== undefined) {
-              <div class="tier-group-label header-label">
-                <mat-icon class="drag-icon">drag_indicator</mat-icon>
-                {{ group.label }}
-                <mat-icon class="edit-icon">edit</mat-icon>
-              </div>
-            }
-            <div class="tier-entry-container">
-              @for (tier of group.tiers; track tier) {
-                <div
-                  class="tier"
-                  cdkDropList
-                  [cdkDropListData]="tier"
-                  (cdkDropListDropped)="drop($event)"
-                >
-                  <div class="tier-label header-label">
-                    <mat-icon class="drag-icon">drag_indicator</mat-icon>
-                    {{ tier.name }}
-                    <mat-icon class="edit-icon">edit</mat-icon>
-                  </div>
-                  <div class="tier-entries">
-                    @for (pokemon of tier.pokemon; track pokemon) {
-                      <div
-                        cdkDrag
-                        [cdkDragStartDelay]="500"
-                        (mousedown)="onMouseDown()"
-                        (mouseup)="onMouseUp(pokemon)"
-                        (cdkDragStarted)="onDragStarted()"
-                        class="tier-entry"
-                        [ngClass]="{ selected: pokemon.selected }"
-                      >
-                        <div *cdkDragPlaceholder class="drag-placeholder"></div>
-                        <div class="entry-sprite">
-                          <sprite [pid]="pokemon.id"></sprite>
-                        </div>
-                        <div class="entry-name">
-                          {{ pokemon.name }}
-                        </div>
-                        <div class="button-container">
-                          @if (pokemon.orgTier?.length) {
-                            <button class="icon-button">
-                              <mat-icon (click)="undoMove(pokemon)"
-                                >undo</mat-icon
-                              >
-                            </button>
-                          }
-                          <button class="icon-button">
-                            <mat-icon>edit</mat-icon>
-                          </button>
-                        </div>
-                      </div>
-                    }
-                  </div>
+      <div class="tier-wrapper">
+        <div class="tier-container">
+          @for (group of tierGroups; track group) {
+            <div class="tier-group">
+              @if (group.label !== undefined) {
+                <div class="tier-group-label header-label">
+                  <mat-icon class="drag-icon">drag_indicator</mat-icon>
+                  {{ group.label }}
+                  <mat-icon class="edit-icon" (click)="editTierGroup(group)"
+                    >edit</mat-icon
+                  >
                 </div>
               }
-              <div class="new-tier">
-                <div class="add-icon">
-                  <mat-icon>add</mat-icon>
+              <div class="tier-entry-container">
+                @for (tier of group.tiers; track tier) {
+                  <div
+                    class="tier"
+                    cdkDropList
+                    [cdkDropListData]="tier"
+                    (cdkDropListDropped)="drop($event)"
+                  >
+                    <div class="tier-label header-label">
+                      <mat-icon class="drag-icon">drag_indicator</mat-icon>
+                      {{ tier.name }}
+                      <mat-icon class="edit-icon" (click)="editTier(tier)"
+                        >edit</mat-icon
+                      >
+                    </div>
+                    <div class="tier-entries">
+                      @for (pokemon of tier.pokemon; track pokemon) {
+                        <div
+                          cdkDrag
+                          matRipple
+                          [matRippleCentered]="true"
+                          [matRippleRadius]="40"
+                          [matRippleDisabled]="false"
+                          [cdkDragStartDelay]="500"
+                          (mousedown)="onMouseDown()"
+                          (mouseup)="onMouseUp(pokemon)"
+                          (cdkDragStarted)="onDragStarted()"
+                          class="tier-entry"
+                          [ngClass]="{
+                            selected: pokemon.selected,
+                            dragStarted: dragStarted,
+                          }"
+                        >
+                          <div
+                            *cdkDragPlaceholder
+                            class="drag-placeholder"
+                          ></div>
+                          <div class="entry-sprite">
+                            <sprite [pid]="pokemon.id"></sprite>
+                          </div>
+                          <div class="entry-name">
+                            {{ pokemon.name }}
+                          </div>
+                          <div class="button-container">
+                            @if (pokemon.orgTier?.length) {
+                              <button class="icon-button">
+                                <mat-icon
+                                  (click)="
+                                    undoMove(pokemon); $event.stopPropagation()
+                                  "
+                                  >undo</mat-icon
+                                >
+                              </button>
+                            }
+                            <button class="icon-button">
+                              <mat-icon
+                                (click)="
+                                  editPokemon(pokemon, tier);
+                                  $event.stopPropagation()
+                                "
+                                >edit</mat-icon
+                              >
+                            </button>
+                          </div>
+                        </div>
+                      }
+                    </div>
+                  </div>
+                }
+                <div class="new-tier">
+                  <div class="add-icon">
+                    <mat-icon>add</mat-icon>
+                  </div>
                 </div>
               </div>
             </div>
+          }
+          <div class="new-tier-group">
+            <div class="add-icon">
+              <mat-icon>add</mat-icon>
+            </div>
           </div>
-        }
+        </div>
       </div>
     </div>
   } @else {
