--- a/src/app/league-zone/league-standings/coach-standings/coach-standings.component.scss
+++ b/src/app/league-zone/league-standings/coach-standings/coach-standings.component.scss
@@ -76,11 +76,10 @@
     display: flex;
     justify-content: center;
     align-items: center;
-  }
-
-  .logo-cell img {
-    max-width: 100%;
-    max-height: 100%;
+    img {
+      max-width: 100%;
+      max-height: 100%;
+    }
   }
 
   .team-cell {
