--- a/src/app/league-zone/league-trades/league-trades.component.html
+++ b/src/app/league-zone/league-trades/league-trades.component.html
@@ -3,7 +3,7 @@
     <div class="stage-header">Week 4</div>
     <div class="stage-body">
       @for (tradeLog of tradeLogs; track tradeLog) {
-        <pdz-league-trade [tradeLog]="tradeLog"></pdz-league-trade>
+        <pdz-trade-card [tradeLog]="tradeLog"></pdz-trade-card>
       }
     </div>
   </div>
