--- a/src/app/league-zone/league/file-upload-preview/file-upload-preview.component.scss
+++ b/src/app/league-zone/league/file-upload-preview/file-upload-preview.component.scss
@@ -18,6 +18,7 @@
 
 .file-preview-image {
   max-width: 100%;
+  aspect-ratio: 1;
   max-height: 280px; // Slightly less than container max-height
   height: auto;
   display: block;
