basic new league form

--- a/src/app/league-zone/league-manage/league-manage.component.html
+++ b/src/app/league-zone/league-manage/league-manage.component.html
@@ -1,10 +1,4 @@
 <p>league-manage works!</p>
 <div>
-  <button routerLink="../">Back</button>
-</div>
-<div>
-  <button routerLink="new">New League</button>
-</div>
-<div>
-  <button routerLink="edit">Edit League</button>
+  <button routerLink="tiers">Tiers</button>
 </div>
