fix typechart summarizing

--- a/src/app/drafts/matchup-overview/matchup/matchup.component.html
+++ b/src/app/drafts/matchup-overview/matchup/matchup.component.html
@@ -16,7 +16,7 @@
       ></speedchart>
     </div>
     <div class="widget-wrapper">
-      <typechart [typecharts]="matchupData.typechart"></typechart>
+      <pdz-typechart [typecharts]="matchupData.typechart"></pdz-typechart>
     </div>
     <div class="widget-wrapper">
       <movechart [teams]="matchupData.movechart"></movechart>
