--- a/src/app/planner/planner.component.html
+++ b/src/app/planner/planner.component.html
@@ -83,9 +83,9 @@
             <mat-tab label="Typechart">
               <ng-template matTabContent>
                 <div class="tab-container">
-                  <planner-typechart
+                  <pdz-planner-typechart
                     [typechart]="typechart"
-                  ></planner-typechart>
+                  ></pdz-planner-typechart>
                 </div>
               </ng-template>
             </mat-tab>
