add manage layout

--- a/src/app/league-zone/league-tier-list/league-tier-list-form/pokemon-edit-dialog/pokemon-edit-dialog.component.html
+++ b/src/app/league-zone/league-tier-list/league-tier-list-form/pokemon-edit-dialog/pokemon-edit-dialog.component.html
@@ -11,7 +11,7 @@
       </div>
       @if (
         data.pokemon.originalTierName &&
-        data.pokemon.originalTierName !== data.currentTier?.name
+        data.pokemon.originalTierName !== data.currentTier.name
       ) {
         <p class="original-tier">
           Original Tier: {{ data.pokemon.originalTierName }}
