--- a/src/app/league-zone/league.scss
+++ b/src/app/league-zone/league.scss
@@ -16,3 +16,22 @@
     border-radius: 0.5rem;
   }
 }
+
+.league-section {
+  overflow: hidden;
+  display: flex;
+  flex-direction: column;
+  .league-section-title {
+    font-family:
+      Nasalization RG,
+      sans-serif;
+    padding: 0.25rem;
+    margin: 0 0.25rem;
+    font-weight: bold;
+  }
+
+  .league-section-body {
+    border: 1px solid var(--mat-sys-outline);
+    border-radius: 0.5rem;
+  }
+}
