--- a/src/app/league-zone/league-rules/league-rules.component.html
+++ b/src/app/league-zone/league-rules/league-rules.component.html
@@ -1,6 +1,8 @@
-<h6>
-  angular&#64;{{ angularVersion }} | ngx-markdown&#64;{{ ngxMarkdownVersion }}
-</h6>
-<br />
-<textarea class="variable-textarea" [(ngModel)]="markdown"></textarea>
-<markdown class="variable-binding" [data]="markdown"></markdown>
+<div class="markdown-wrapper prose">
+  <h6>
+    angular&#64;{{ angularVersion }} | ngx-markdown&#64;{{ ngxMarkdownVersion }}
+  </h6>
+  <br />
+  <textarea class="variable-textarea" [(ngModel)]="markdown"></textarea>
+  <markdown class="variable-binding" [data]="markdown"></markdown>
+</div>
