--- a/src/app/league-zone/league-bracket/league-bracket.component.html
+++ b/src/app/league-zone/league-bracket/league-bracket.component.html
@@ -1,3 +1,4 @@
+<pdz-league-single-elim-bracket></pdz-league-single-elim-bracket>
 <div class="bracket-rounds">
   @for (round of rounds; track round) {
     <div class="round-container">
